INCOMPATIBILITY.

* Session HOL-Analysis: Moebius functions and the Riemann mapping
theorem.

* Class linordered_semiring_1 covers zero_less_one also, ruling out
pathologic instances. Minor INCOMPATIBILITY.

* Removed nat-int transfer machinery. Rare INCOMPATIBILITY.

* Predicate coprime is now a real definition, not a mere
abbreviation. INCOMPATIBILITY.


*** System ***

* Session ROOT entry: empty 'document_files' means there is no document
for this session. There is no need to specify options [document = false]
anymore.

* The command-line tool "isabelle mkroot" now always produces a document
outline: its options have been adapted accordingly. INCOMPATIBILITY.

* The command-line tool "isabelle mkroot -I" initializes a Mercurial
repository for the generated session files.

* Linux and Windows/Cygwin is for x86_64 only. Old 32bit platform
support has been discontinued.

* Mac OS X 10.10 Yosemite is now the baseline version; Mavericks is no
longer supported.

* Java runtime is for x86_64 only. Corresponding Isabelle settings have
been renamed to ISABELLE_TOOL_JAVA_OPTIONS and JEDIT_JAVA_OPTIONS,
instead of former 32/64 variants. INCOMPATIBILITY.

* Command-line tool "isabelle build" supports new options:
  - option -B NAME: include session NAME and all descendants
  - option -S: only observe changes of sources, not heap images
  - option -f: forces a fresh build

* Command-line tool "isabelle build" takes "condition" options with the
corresponding environment values into account, when determining the
up-to-date status of a session.

* Command-line tool "isabelle imports -I" also reports actual session
imports. This helps to minimize the session dependency graph.

* Update to current Poly/ML 5.7.1 with slightly improved performance and
PIDE markup for identifier bindings.

* ISABELLE_LATEX and ISABELLE_PDFLATEX now include platform-specific
options for improved error reporting. Potential INCOMPATIBILITY with